fix: complete master prompt v2 hardening